# M.A.R.S.

./: .clang-format  .cppcheck-suppressions  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: mars_example.yaml
doc/: docker.md
include/app/: application.hpp  config.hpp
include/core/: CMakeLists.txt  measurer.hpp  measurer_registry.hpp  probe_service.hpp  summary_printer.hpp
include/core/tests/: CMakeLists.txt  core_table_test.cpp
include/infra/: CMakeLists.txt  logging.hpp
include/measurement/: CMakeLists.txt  CMakeLists_backup.txt
include/measurement/branch_history_table/: CMakeLists.txt  branch_history_table_measurer.hpp
include/measurement/branch_history_table/tests/: CMakeLists.txt
include/measurement/branch_target_buffer/: CMakeLists.txt  branch_target_buffer_measurer.hpp
include/measurement/cache/: CMakeLists.txt  boundary_analyzer.hpp  cache_measurer.hpp  cache_profiler_list.hpp
include/measurement/cache/tests/: cache_measurer_table_test.cpp
include/measurement/core/: CMakeLists.txt  cpu_info_data.hpp  measurer.hpp  measurer_registry.hpp  probe_service.hpp  summary_printer.hpp
include/measurement/core/tests/: CMakeLists.txt  core_table_test.cpp
include/measurement/exec_ports/: CMakeLists.txt  exec_ports_measurer.hpp
include/measurement/exec_ports/tests/: CMakeLists.txt
include/measurement/return_address_stack/: CMakeLists.txt  return_address_stack_measurer.hpp
include/measurement/rob/: CMakeLists.txt  rob_measurer.hpp
include/measurement/rob/tests/: rob_table_test.cpp
include/measurement/store_to_load_forwarding/: CMakeLists.txt  store_to_load_forwarding_measurer.hpp
include/measurement/tlb/: CMakeLists.txt  README.md  tlb_measurer.hpp
include/measurement/tlb/tests/: CMakeLists.txt  tlb_measurer_table_test.cpp
include/measurement/uops_cache/: CMakeLists.txt  uops_cache_measurer.hpp
include/measurement/uops_cache/tests/: uops_cache_table_test.cpp
include/measurement/write_buffer/: CMakeLists.txt  write_buffer_measurer.hpp
include/platform/: CMakeLists.txt  arch.hpp  events_discovery.hpp  os.hpp  os_errors.hpp  pmc.hpp
include/platform/detail/: arch_x86.ipp
include/shared_types/: cache_types.hpp  cpu_info_data.hpp  cpu_vendor.hpp
include/silicon_probe/app/: application.hpp  config.hpp
include/silicon_probe/branch_history_table/: branch_history_table_measurer.hpp
include/silicon_probe/branch_target_buffer/: branch_target_buffer_measurer.hpp
include/silicon_probe/cache/: boundary_analyzer.hpp  cache_measurer.hpp  cache_profiler_list.hpp
include/silicon_probe/core/: cpu_info_data.hpp  measurer.hpp  measurer_registry.hpp  probe_service.hpp  summary_printer.hpp
include/silicon_probe/exec_ports/: exec_ports_measurer.hpp
include/silicon_probe/infra/: logging.hpp
include/silicon_probe/platform/: arch.hpp  cpu_vendor.hpp  events_discovery.hpp  os.hpp  pmc.hpp  port_events_discovery.hpp
include/silicon_probe/platform/detail/: arch_x86.ipp
include/silicon_probe/return_address_stack/: return_address_stack_measurer.hpp
include/silicon_probe/rob/: rob_measurer.hpp
include/silicon_probe/uops_cache/: uops_cache_measurer.hpp
src/: main.cpp
src/app/: CMakeLists.txt  application.cpp  config.cpp  config_loader.cpp
src/arch/: arch.hpp  arch_x86.ipp
src/cache/: boundary_analyzer.cpp  cache_measurer.cpp  cache_profiler_list.cpp
src/cli/: CMakeLists.txt  README.md  main.cpp
src/core/: measurer_registry.cpp  probe_service.cpp  summary_printer.cpp
src/cpu_info/: cpu_info.cpp  cpu_info.hpp  cpu_info_data.hpp
src/infra/: logging.cpp
src/logger/: log_level.hpp  logger.cpp  logger.hpp
src/measurement/: CMakeLists.txt
src/measurement/branch_history_table/: CMakeLists.txt  branch_history_table_measurer.cpp
src/measurement/branch_history_table/tests/: CMakeLists.txt  branch_history_table_table_test.cpp
src/measurement/branch_target_buffer/: CMakeLists.txt  branch_target_buffer_measurer.cpp
src/measurement/cache/: CMakeLists.txt  boundary_analyzer.cpp  cache_measurer.cpp  cache_profiler_list.cpp
src/measurement/cache/tests/: CMakeLists.txt  boundary_analyzer_table_test.cpp  cache_measurer_table_test.cpp
src/measurement/exec_ports/: CMakeLists.txt  exec_ports_measurer.cpp
src/measurement/exec_ports/tests/: CMakeLists.txt  exec_ports_table_test.cpp
src/measurement/return_address_stack/: CMakeLists.txt  return_address_stack_measurer.cpp
src/measurement/rob/: CMakeLists.txt  rob_measurer.cpp
src/measurement/rob/tests/: CMakeLists.txt  rob_table_test.cpp
src/measurement/store_to_load_forwarding/: CMakeLists.txt  store_to_load_forwarding_measurer.cpp
src/measurement/tlb/: CMakeLists.txt  tlb_measurer.cpp
src/measurement/tlb/tests/: tlb_measurer_table_test.cpp
src/measurement/uops_cache/: uops_cache_measurer.cpp
src/measurement/uops_cache/tests/: CMakeLists.txt  uops_cache_table_test.cpp
src/measurement/write_buffer/: CMakeLists.txt  write_buffer_measurer.cpp
src/measurers/: measurer.hpp
src/measurers/cache_measurer/: cache_boundary.hpp  cache_measurer.cpp  cache_measurer.hpp  cache_profiler_list.cpp  cache_profiler_list.hpp
src/os/: os.hpp  os_fwd.hpp  os_linux.cpp  os_linux.hpp
src/platform/: cpu_vendor.cpp  port_events_discovery.cpp
src/platform/linux/: events_discovery_linux.cpp  os_linux.cpp  pmc_linux.cpp
src/platform/unsupported/: pmc_unsupported.cpp
